
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct v4l2_subdev {int dummy; } ;
struct v4l2_queryctrl {int id; } ;
struct cx18_av_state {int default_volume; } ;


 int EINVAL ;
 struct cx18_av_state* to_cx18_av_state (struct v4l2_subdev*) ;
 int v4l2_ctrl_query_fill (struct v4l2_queryctrl*,int,int,int,int) ;

__attribute__((used)) static int cx18_av_queryctrl(struct v4l2_subdev *sd, struct v4l2_queryctrl *qc)
{
 struct cx18_av_state *state = to_cx18_av_state(sd);

 switch (qc->id) {
 case 131:
  return v4l2_ctrl_query_fill(qc, 0, 255, 1, 128);
 case 130:
 case 128:
  return v4l2_ctrl_query_fill(qc, 0, 127, 1, 64);
 case 129:
  return v4l2_ctrl_query_fill(qc, -128, 127, 1, 0);
 default:
  break;
 }

 switch (qc->id) {
 case 132:
  return v4l2_ctrl_query_fill(qc, 0, 65535,
   65535 / 100, state->default_volume);
 case 134:
  return v4l2_ctrl_query_fill(qc, 0, 1, 1, 0);
 case 136:
 case 135:
 case 133:
  return v4l2_ctrl_query_fill(qc, 0, 65535, 65535 / 100, 32768);
 default:
  return -EINVAL;
 }
 return -EINVAL;
}
